--- a/quickstart/frontend/src/index.css
+++ b/quickstart/frontend/src/index.css
@@ -48,6 +48,9 @@ button {
 button:hover {
   border-color: #646cff;
 }
+button[disabled='']:hover {
+  border-color: transparent;
+}
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
