--- a/quickstart/frontend/src/index.css
+++ b/quickstart/frontend/src/index.css
@@ -1,5 +1,6 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
+@plugin "daisyui" {
+  themes: all;
+}
 
 /* You can add custom styles below */
