--- a/quickstart/frontend/src/index.css
+++ b/quickstart/frontend/src/index.css
@@ -1,6 +1,29 @@
 @import "tailwindcss";
 @plugin "daisyui" {
-  themes: all;
+  themes: pastel --default, halloween --prefersdark;
+}
+
+@plugin "daisyui/theme" {
+  name: "halloween";
+  default: false;
+  --radius-field: 9999px;
+
+  --color-primary: oklch(55% 0.063 306.703);
+  --color-primary-content: oklch(95% 0.265 301.924);
+  --color-secondary: oklch(45% 0.058 10.001);
+  --color-secondary-content: oklch(95% 0.222 16.935);
+  --color-accent: oklch(55% 0.093 164.15);
+  --color-accent-content: oklch(95% 0.118 165.612);
+  --color-neutral: oklch(30% 0.046 257.417);
+  --color-neutral-content: oklch(95% 0.013 255.508);
+  --color-info: oklch(51% 0.127 207.078);
+  --color-info-content: oklch(95% 0.105 223.128);
+  --color-success: oklch(52% 0.15 154.449);
+  --color-success-content: oklch(95% 0.154 150.069);
+  --color-warning: oklch(48% 0.128 66.29);
+  --color-warning-content: oklch(95% 0.195 38.402);
+  --color-error: oklch(45% 0.114 19.571);
+  --color-error-content: oklch(95% 0.213 27.518);
 }
 
 /* You can add custom styles below */
